fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/Territory_Assignment__c.object-meta.xml
<CustomObject>
    <label>Territory Account Assignments</label>
    <nameField>
        <label>Territory Assignments</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Account Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>