fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Account_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Id__c</fullName>
    <formula>Account__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Id</label>
    <type>Text</type>
</CustomField>