fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <inlineHelpText>Why was this rule assigned to this territory.</inlineHelpText>
    <label>Assignment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>