fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Business_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Text__c</fullName>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>