fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Key_Check__c.field-meta.xml
<CustomField>
    <fullName>Key_Check__c</fullName>
    <formula>Key__c = Territory_Number__c &amp; &quot;-&quot; &amp; Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Check</label>
    <type>Checkbox</type>
</CustomField>