fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Matching_Logic__c.field-meta.xml
<CustomField>
    <fullName>Matching_Logic__c</fullName>
    <inlineHelpText>Criteria used to match the Account to the Territory.</inlineHelpText>
    <label>Matching Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>