fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territory Account Assignments</relationshipLabel>
    <relationshipName>Territory_Account_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>