fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/Territory_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Territory_Alignment__c</fullName>
    <label>Territory Alignment Rules</label>
    <referenceTo>Territory_Alignment__c</referenceTo>
    <relationshipLabel>Territory Account Assignments</relationshipLabel>
    <relationshipName>Territory_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>