fullSandbox11072023/force-app/main/default/objects/Territory_Assignment__c/fields/ZPSA_Table__c.field-meta.xml
<CustomField>
    <fullName>ZPSA_Table__c</fullName>
    <label>ZPSA Table</label>
    <length>4</length>
    <type>Text</type>
</CustomField>